// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Schema de validation: champsNumeroRcRcaPacs > LORSQUE le formulaire est soumis et que le champ n'est pas valide, ALORS une erreur apparait 1`] = `
<form
  action="#"
>
  <div
    class="grid grid-cols-2 gap-4"
  >
    <div
      class="champ-en-erreur"
    >
      <label
        class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-rouge"
        for="numero.ligne1.anneeInscription"
      >
        Numéro
      </label>
      <div
        class="flex items-center gap-1"
      >
        <input
          class="border-1 flex w-10 rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-rouge focus-visible:ring-rouge"
          id="numero.ligne1.anneeInscription"
          maxlength="4"
          name="numero.ligne1.anneeInscription"
          placeholder="AAAA"
          value=""
        />
        <span>
          -
        </span>
        <div
          class="relative flex flex-grow rounded-md shadow-sm"
        >
          <input
            class="border-1 flex w-full rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-rouge focus-visible:ring-rouge"
            id="numero.ligne1.numero"
            maxlength="5"
            name="numero.ligne1.numero"
            placeholder="XXXXX"
            value=""
          />
        </div>
      </div>
      <div
        class="text-start text-sm text-rouge"
      >
        ⚠ La saisie du champ est obligatoire
      </div>
    </div>
  </div>
  <button
    type="submit"
  >
    Valider
  </button>
</form>
`;

exports[`Schema de validation: champsNumeroRcRcaPacs > LORSQUE le formulaire est soumis et que le champ n'est pas valide, ALORS une erreur apparait 2`] = `
<form
  action="#"
>
  <div
    class="grid grid-cols-2 gap-4"
  >
    <div
      class="champ-en-erreur"
    >
      <label
        class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-rouge"
        for="numero.ligne1.anneeInscription"
      >
        Numéro
      </label>
      <div
        class="flex items-center gap-1"
      >
        <input
          class="border-1 flex w-10 rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-rouge focus-visible:ring-rouge"
          id="numero.ligne1.anneeInscription"
          maxlength="4"
          name="numero.ligne1.anneeInscription"
          placeholder="AAAA"
          value="123"
        />
        <span>
          -
        </span>
        <div
          class="relative flex flex-grow rounded-md shadow-sm"
        >
          <input
            class="border-1 flex w-full rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-rouge focus-visible:ring-rouge"
            id="numero.ligne1.numero"
            maxlength="5"
            name="numero.ligne1.numero"
            placeholder="XXXXX"
            value=""
          />
        </div>
      </div>
      <div
        class="text-start text-sm text-rouge"
      >
        ⚠ L'année doit être sur 4 chiffres
      </div>
    </div>
  </div>
  <button
    type="submit"
  >
    Valider
  </button>
</form>
`;

exports[`Schema de validation: champsNumeroRcRcaPacs > LORSQUE le formulaire est soumis et que le champ n'est pas valide, ALORS une erreur apparait 3`] = `
<form
  action="#"
>
  <div
    class="grid grid-cols-2 gap-4"
  >
    <div
      class="champ-en-erreur"
    >
      <label
        class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-rouge"
        for="numero.ligne1.anneeInscription"
      >
        Numéro
      </label>
      <div
        class="flex items-center gap-1"
      >
        <input
          class="border-1 flex w-10 rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-rouge focus-visible:ring-rouge"
          id="numero.ligne1.anneeInscription"
          maxlength="4"
          name="numero.ligne1.anneeInscription"
          placeholder="AAAA"
          value="2026"
        />
        <span>
          -
        </span>
        <div
          class="relative flex flex-grow rounded-md shadow-sm"
        >
          <input
            class="border-1 flex w-full rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-rouge focus-visible:ring-rouge"
            id="numero.ligne1.numero"
            maxlength="5"
            name="numero.ligne1.numero"
            placeholder="XXXXX"
            value=""
          />
        </div>
      </div>
      <div
        class="text-start text-sm text-rouge"
      >
        ⚠ L'année ne peut pas être supérieure à l'année actuelle
      </div>
    </div>
  </div>
  <button
    type="submit"
  >
    Valider
  </button>
</form>
`;

exports[`Schema de validation: champsNumeroRcRcaPacs > LORSQUE le formulaire est soumis et que le champ n'est pas valide, ALORS une erreur apparait 4`] = `
<form
  action="#"
>
  <div
    class="grid grid-cols-2 gap-4"
  >
    <div
      class="champ-en-erreur"
    >
      <label
        class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-rouge"
        for="numero.ligne1.anneeInscription"
      >
        Numéro
      </label>
      <div
        class="flex items-center gap-1"
      >
        <input
          class="border-1 flex w-10 rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-rouge focus-visible:ring-rouge"
          id="numero.ligne1.anneeInscription"
          maxlength="4"
          name="numero.ligne1.anneeInscription"
          placeholder="AAAA"
          value=""
        />
        <span>
          -
        </span>
        <div
          class="relative flex flex-grow rounded-md shadow-sm"
        >
          <input
            class="border-1 flex w-full rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
            id="numero.ligne1.numero"
            maxlength="5"
            name="numero.ligne1.numero"
            placeholder="XXXXX"
            value="4"
          />
        </div>
      </div>
      <div
        class="text-start text-sm text-rouge"
      >
        ⚠ La saisie du champ est obligatoire
      </div>
    </div>
  </div>
  <button
    type="submit"
  >
    Valider
  </button>
</form>
`;

exports[`Schema de validation: champsNumeroRcRcaPacs > LORSQUE plusieurs champs sont présents, ALORS les bonnes erreurs apparaissent sur les bons champs 1`] = `
<form
  action="#"
>
  <div
    class="grid grid-cols-2 gap-4"
  >
    <div
      class="champ-en-erreur"
    >
      <label
        class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-rouge"
        for="numero.ligne1.anneeInscription"
      >
        Numéro 1
      </label>
      <div
        class="flex items-center gap-1"
      >
        <input
          class="border-1 flex w-10 rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-rouge focus-visible:ring-rouge"
          id="numero.ligne1.anneeInscription"
          maxlength="4"
          name="numero.ligne1.anneeInscription"
          placeholder="AAAA"
          value=""
        />
        <span>
          -
        </span>
        <div
          class="relative flex flex-grow rounded-md shadow-sm"
        >
          <input
            class="border-1 flex w-full rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-rouge focus-visible:ring-rouge"
            id="numero.ligne1.numero"
            maxlength="5"
            name="numero.ligne1.numero"
            placeholder="XXXXX"
            value=""
          />
        </div>
      </div>
      <div
        class="text-start text-sm text-rouge"
      >
        ⚠ La saisie du champ est obligatoire
      </div>
    </div>
    <div
      class="flex justify-center pt-[1.6rem]"
    >
      <button
        class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out border border-solid border-bleu-sombre bg-blanc hover:bg-bleu hover:text-blanc hover:border-bleu focus-visible:bg-bleu focus-visible:text-blanc focus-visible:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 text-bleu-sombre disabled:cursor-not-allowed h-9 w-1/2"
        hidden=""
        title="Ajouter un numéro"
        type="button"
      >
        <div
          class="flex items-center gap-4 px-2"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="AddCircleIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
            />
          </svg>
          <span
            class="font-marianne text-sm font-bold"
          >
            Ajouter un numéro
          </span>
        </div>
      </button>
    </div>
    <div>
      <div>
        <label
          class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
          for="numero.ligne2.anneeInscription"
        >
          Numéro 2
        </label>
        <div
          class="flex items-center gap-1"
        >
          <input
            class="border-1 flex w-10 rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
            id="numero.ligne2.anneeInscription"
            maxlength="4"
            name="numero.ligne2.anneeInscription"
            placeholder="AAAA"
            value=""
          />
          <span>
            -
          </span>
          <div
            class="relative flex flex-grow rounded-md shadow-sm"
          >
            <input
              class="border-1 flex w-full rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
              id="numero.ligne2.numero"
              maxlength="5"
              name="numero.ligne2.numero"
              placeholder="XXXXX"
              value=""
            />
            <button
              class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out hover:bg-rouge focus-visible:bg-rouge focus:outline-none focus-visible:ring-2 focus-visible:ring-rouge focus-visible:ring-offset-2 disabled:cursor-not-allowed group absolute right-0 h-full rounded-l-none bg-transparent"
              title="Supprimer ce numéro"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium text-rouge group-hover:text-blanc group-focus-visible:text-blanc css-i4bv87-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div>
        <label
          class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
          for="numero.ligne3.anneeInscription"
        >
          Numéro 3
        </label>
        <div
          class="flex items-center gap-1"
        >
          <input
            class="border-1 flex w-10 rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
            id="numero.ligne3.anneeInscription"
            maxlength="4"
            name="numero.ligne3.anneeInscription"
            placeholder="AAAA"
            value=""
          />
          <span>
            -
          </span>
          <div
            class="relative flex flex-grow rounded-md shadow-sm"
          >
            <input
              class="border-1 flex w-full rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
              id="numero.ligne3.numero"
              maxlength="5"
              name="numero.ligne3.numero"
              placeholder="XXXXX"
              value=""
            />
            <button
              class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out hover:bg-rouge focus-visible:bg-rouge focus:outline-none focus-visible:ring-2 focus-visible:ring-rouge focus-visible:ring-offset-2 disabled:cursor-not-allowed group absolute right-0 h-full rounded-l-none bg-transparent"
              title="Supprimer ce numéro"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium text-rouge group-hover:text-blanc group-focus-visible:text-blanc css-i4bv87-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div>
        <label
          class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
          for="numero.ligne4.anneeInscription"
        >
          Numéro 4
        </label>
        <div
          class="flex items-center gap-1"
        >
          <input
            class="border-1 flex w-10 rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
            id="numero.ligne4.anneeInscription"
            maxlength="4"
            name="numero.ligne4.anneeInscription"
            placeholder="AAAA"
            value=""
          />
          <span>
            -
          </span>
          <div
            class="relative flex flex-grow rounded-md shadow-sm"
          >
            <input
              class="border-1 flex w-full rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
              id="numero.ligne4.numero"
              maxlength="5"
              name="numero.ligne4.numero"
              placeholder="XXXXX"
              value=""
            />
            <button
              class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out hover:bg-rouge focus-visible:bg-rouge focus:outline-none focus-visible:ring-2 focus-visible:ring-rouge focus-visible:ring-offset-2 disabled:cursor-not-allowed group absolute right-0 h-full rounded-l-none bg-transparent"
              title="Supprimer ce numéro"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium text-rouge group-hover:text-blanc group-focus-visible:text-blanc css-i4bv87-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div>
        <label
          class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
          for="numero.ligne5.anneeInscription"
        >
          Numéro 5
        </label>
        <div
          class="flex items-center gap-1"
        >
          <input
            class="border-1 flex w-10 rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
            id="numero.ligne5.anneeInscription"
            maxlength="4"
            name="numero.ligne5.anneeInscription"
            placeholder="AAAA"
            value=""
          />
          <span>
            -
          </span>
          <div
            class="relative flex flex-grow rounded-md shadow-sm"
          >
            <input
              class="border-1 flex w-full rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
              id="numero.ligne5.numero"
              maxlength="5"
              name="numero.ligne5.numero"
              placeholder="XXXXX"
              value=""
            />
            <button
              class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out hover:bg-rouge focus-visible:bg-rouge focus:outline-none focus-visible:ring-2 focus-visible:ring-rouge focus-visible:ring-offset-2 disabled:cursor-not-allowed group absolute right-0 h-full rounded-l-none bg-transparent"
              title="Supprimer ce numéro"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium text-rouge group-hover:text-blanc group-focus-visible:text-blanc css-i4bv87-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div>
        <label
          class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
          for="numero.ligne6.anneeInscription"
        >
          Numéro 6
        </label>
        <div
          class="flex items-center gap-1"
        >
          <input
            class="border-1 flex w-10 rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
            id="numero.ligne6.anneeInscription"
            maxlength="4"
            name="numero.ligne6.anneeInscription"
            placeholder="AAAA"
            value=""
          />
          <span>
            -
          </span>
          <div
            class="relative flex flex-grow rounded-md shadow-sm"
          >
            <input
              class="border-1 flex w-full rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
              id="numero.ligne6.numero"
              maxlength="5"
              name="numero.ligne6.numero"
              placeholder="XXXXX"
              value=""
            />
            <button
              class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out hover:bg-rouge focus-visible:bg-rouge focus:outline-none focus-visible:ring-2 focus-visible:ring-rouge focus-visible:ring-offset-2 disabled:cursor-not-allowed group absolute right-0 h-full rounded-l-none bg-transparent"
              title="Supprimer ce numéro"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium text-rouge group-hover:text-blanc group-focus-visible:text-blanc css-i4bv87-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    type="submit"
  >
    Valider
  </button>
</form>
`;

exports[`Schema de validation: champsNumeroRcRcaPacs > LORSQUE plusieurs champs sont présents, ALORS les bonnes erreurs apparaissent sur les bons champs 2`] = `
<form
  action="#"
>
  <div
    class="grid grid-cols-2 gap-4"
  >
    <div
      class="champ-en-erreur"
    >
      <label
        class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-rouge"
        for="numero.ligne1.anneeInscription"
      >
        Numéro 1
      </label>
      <div
        class="flex items-center gap-1"
      >
        <input
          class="border-1 flex w-10 rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-rouge focus-visible:ring-rouge"
          id="numero.ligne1.anneeInscription"
          maxlength="4"
          name="numero.ligne1.anneeInscription"
          placeholder="AAAA"
          value=""
        />
        <span>
          -
        </span>
        <div
          class="relative flex flex-grow rounded-md shadow-sm"
        >
          <input
            class="border-1 flex w-full rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-rouge focus-visible:ring-rouge"
            id="numero.ligne1.numero"
            maxlength="5"
            name="numero.ligne1.numero"
            placeholder="XXXXX"
            value=""
          />
        </div>
      </div>
      <div
        class="text-start text-sm text-rouge"
      >
        ⚠ La saisie du champ est obligatoire
      </div>
    </div>
    <div
      class="flex justify-center pt-[1.6rem]"
    >
      <button
        class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out border border-solid border-bleu-sombre bg-blanc hover:bg-bleu hover:text-blanc hover:border-bleu focus-visible:bg-bleu focus-visible:text-blanc focus-visible:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 text-bleu-sombre disabled:cursor-not-allowed h-9 w-1/2"
        hidden=""
        title="Ajouter un numéro"
        type="button"
      >
        <div
          class="flex items-center gap-4 px-2"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="AddCircleIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
            />
          </svg>
          <span
            class="font-marianne text-sm font-bold"
          >
            Ajouter un numéro
          </span>
        </div>
      </button>
    </div>
    <div>
      <div
        class="champ-en-erreur"
      >
        <label
          class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-rouge"
          for="numero.ligne2.anneeInscription"
        >
          Numéro 2
        </label>
        <div
          class="flex items-center gap-1"
        >
          <input
            class="border-1 flex w-10 rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-rouge focus-visible:ring-rouge"
            id="numero.ligne2.anneeInscription"
            maxlength="4"
            name="numero.ligne2.anneeInscription"
            placeholder="AAAA"
            value=""
          />
          <span>
            -
          </span>
          <div
            class="relative flex flex-grow rounded-md shadow-sm"
          >
            <input
              class="border-1 flex w-full rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-rouge focus-visible:ring-rouge"
              id="numero.ligne2.numero"
              maxlength="5"
              name="numero.ligne2.numero"
              placeholder="XXXXX"
              value=""
            />
            <button
              class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out hover:bg-rouge focus-visible:bg-rouge focus:outline-none focus-visible:ring-2 focus-visible:ring-rouge focus-visible:ring-offset-2 disabled:cursor-not-allowed group absolute right-0 h-full rounded-l-none bg-transparent"
              title="Supprimer ce numéro"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium text-rouge group-hover:text-blanc group-focus-visible:text-blanc css-i4bv87-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="text-start text-sm text-rouge"
        >
          ⚠ La saisie du champ est obligatoire
        </div>
      </div>
    </div>
    <div>
      <div
        class="champ-en-erreur"
      >
        <label
          class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-rouge"
          for="numero.ligne3.anneeInscription"
        >
          Numéro 3
        </label>
        <div
          class="flex items-center gap-1"
        >
          <input
            class="border-1 flex w-10 rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-rouge focus-visible:ring-rouge"
            id="numero.ligne3.anneeInscription"
            maxlength="4"
            name="numero.ligne3.anneeInscription"
            placeholder="AAAA"
            value=""
          />
          <span>
            -
          </span>
          <div
            class="relative flex flex-grow rounded-md shadow-sm"
          >
            <input
              class="border-1 flex w-full rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-rouge focus-visible:ring-rouge"
              id="numero.ligne3.numero"
              maxlength="5"
              name="numero.ligne3.numero"
              placeholder="XXXXX"
              value=""
            />
            <button
              class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out hover:bg-rouge focus-visible:bg-rouge focus:outline-none focus-visible:ring-2 focus-visible:ring-rouge focus-visible:ring-offset-2 disabled:cursor-not-allowed group absolute right-0 h-full rounded-l-none bg-transparent"
              title="Supprimer ce numéro"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium text-rouge group-hover:text-blanc group-focus-visible:text-blanc css-i4bv87-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="text-start text-sm text-rouge"
        >
          ⚠ La saisie du champ est obligatoire
        </div>
      </div>
    </div>
    <div>
      <div
        class="champ-en-erreur"
      >
        <label
          class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-rouge"
          for="numero.ligne4.anneeInscription"
        >
          Numéro 4
        </label>
        <div
          class="flex items-center gap-1"
        >
          <input
            class="border-1 flex w-10 rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-rouge focus-visible:ring-rouge"
            id="numero.ligne4.anneeInscription"
            maxlength="4"
            name="numero.ligne4.anneeInscription"
            placeholder="AAAA"
            value=""
          />
          <span>
            -
          </span>
          <div
            class="relative flex flex-grow rounded-md shadow-sm"
          >
            <input
              class="border-1 flex w-full rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-rouge focus-visible:ring-rouge"
              id="numero.ligne4.numero"
              maxlength="5"
              name="numero.ligne4.numero"
              placeholder="XXXXX"
              value=""
            />
            <button
              class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out hover:bg-rouge focus-visible:bg-rouge focus:outline-none focus-visible:ring-2 focus-visible:ring-rouge focus-visible:ring-offset-2 disabled:cursor-not-allowed group absolute right-0 h-full rounded-l-none bg-transparent"
              title="Supprimer ce numéro"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium text-rouge group-hover:text-blanc group-focus-visible:text-blanc css-i4bv87-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="text-start text-sm text-rouge"
        >
          ⚠ La saisie du champ est obligatoire
        </div>
      </div>
    </div>
    <div>
      <div
        class="champ-en-erreur"
      >
        <label
          class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-rouge"
          for="numero.ligne5.anneeInscription"
        >
          Numéro 5
        </label>
        <div
          class="flex items-center gap-1"
        >
          <input
            class="border-1 flex w-10 rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-rouge focus-visible:ring-rouge"
            id="numero.ligne5.anneeInscription"
            maxlength="4"
            name="numero.ligne5.anneeInscription"
            placeholder="AAAA"
            value=""
          />
          <span>
            -
          </span>
          <div
            class="relative flex flex-grow rounded-md shadow-sm"
          >
            <input
              class="border-1 flex w-full rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-rouge focus-visible:ring-rouge"
              id="numero.ligne5.numero"
              maxlength="5"
              name="numero.ligne5.numero"
              placeholder="XXXXX"
              value=""
            />
            <button
              class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out hover:bg-rouge focus-visible:bg-rouge focus:outline-none focus-visible:ring-2 focus-visible:ring-rouge focus-visible:ring-offset-2 disabled:cursor-not-allowed group absolute right-0 h-full rounded-l-none bg-transparent"
              title="Supprimer ce numéro"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium text-rouge group-hover:text-blanc group-focus-visible:text-blanc css-i4bv87-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="text-start text-sm text-rouge"
        >
          ⚠ La saisie du champ est obligatoire
        </div>
      </div>
    </div>
    <div>
      <div>
        <label
          class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
          for="numero.ligne6.anneeInscription"
        >
          Numéro 6
        </label>
        <div
          class="flex items-center gap-1"
        >
          <input
            class="border-1 flex w-10 rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
            id="numero.ligne6.anneeInscription"
            maxlength="4"
            name="numero.ligne6.anneeInscription"
            placeholder="AAAA"
            value="1900"
          />
          <span>
            -
          </span>
          <div
            class="relative flex flex-grow rounded-md shadow-sm"
          >
            <input
              class="border-1 flex w-full rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
              id="numero.ligne6.numero"
              maxlength="5"
              name="numero.ligne6.numero"
              placeholder="XXXXX"
              value="11111"
            />
            <button
              class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out hover:bg-rouge focus-visible:bg-rouge focus:outline-none focus-visible:ring-2 focus-visible:ring-rouge focus-visible:ring-offset-2 disabled:cursor-not-allowed group absolute right-0 h-full rounded-l-none bg-transparent"
              title="Supprimer ce numéro"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium text-rouge group-hover:text-blanc group-focus-visible:text-blanc css-i4bv87-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    type="submit"
  >
    Valider
  </button>
</form>
`;
